--- a/container/ios/App/App/Info.plist
+++ b/container/ios/App/App/Info.plist
@@ -5,15 +5,15 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleDisplayName</key>
-    <string>Puzzle App</string>
+    <string>Puzzle App Word Strike</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
-    <string>com.puzzleapp.main</string>
+    <string>com.puzzleapp.wordstrike</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
-    <string>Puzzle App</string>
+    <string>Puzzle App Word Strike</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
