--- a/container/ios/App/Podfile
+++ b/container/ios/App/Podfile
@@ -25,6 +25,8 @@ target 'App' do
   pod 'Firebase/Core'
   pod 'Firebase/Analytics'
   pod 'Firebase/RemoteConfig'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Firestore'
   
   # AdMob
   pod 'Google-Mobile-Ads-SDK'
