--- a/container/package.json
+++ b/container/package.json
@@ -10,16 +10,18 @@
     "open": "npx cap open ios"
   },
   "dependencies": {
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/device": "^6.0.0",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/preferences": "^6.0.0",
-    "@capacitor-community/sqlite": "^6.0.0"
+    "@capacitor-community/sqlite": "^7.0.2",
+    "@capacitor/app": "^7.1.1",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/device": "^7.0.3",
+    "@capacitor/haptics": "^7.0.3",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/preferences": "^7.0.3",
+    "@revenuecat/purchases-capacitor": "^11.3.0",
+    "@revenuecat/purchases-capacitor-ui": "^11.3.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^6.0.0",
+    "@capacitor/cli": "^7.4.4",
     "typescript": "^5.3.3"
   }
 }
