--- a/container/package.json
+++ b/container/package.json
@@ -16,6 +16,7 @@
     "@capacitor/device": "^7.0.3",
     "@capacitor/haptics": "^7.0.3",
     "@capacitor/ios": "^7.4.4",
+    "@capacitor/keyboard": "^7.0.4",
     "@capacitor/preferences": "^7.0.3",
     "@revenuecat/purchases-capacitor": "^11.3.0",
     "@revenuecat/purchases-capacitor-ui": "^11.3.0"
