--- a/container/package.json
+++ b/container/package.json
@@ -10,6 +10,7 @@
     "open": "npx cap open ios"
   },
   "dependencies": {
+    "@capacitor-community/apple-sign-in": "^7.1.0",
     "@capacitor-community/sqlite": "^7.0.2",
     "@capacitor/app": "^7.1.1",
     "@capacitor/core": "^7.4.4",
