--- a/content/word-strike/package.json
+++ b/content/word-strike/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/apple-sign-in": "^7.1.0",
     "@revenuecat/purchases-capacitor": "11.3.0",
     "@revenuecat/purchases-capacitor-ui": "11.3.0",
     "react": "^18.2.0",
